# ros2_ws

./: launch.sh
px4_ros_com/: CMakeLists.txt
px4_ros_com/src/examples/advertisers/: camera_drone_controller.cpp  debug_vect_advertiser.cpp  follower_drone_controller.cpp
px4_ros_com/src/examples/listeners/: object_detection.cpp  sensor_combined_listener.cpp
px4_ros_com/src/examples/offboard/: offboard_control.cpp
qr_code_position_detector/: CMakeLists.txt  package.xml
qr_code_position_detector/src/: qr_code_position_detector.cpp
